# deps-glfw-glad

./: .gitmodules  CMakeLists.txt  README.md
sample/: CMakeLists.txt  main.cpp
